--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -1176,10 +1176,7 @@ pt: # locale
   departments: "Departamentos"
   employees: "Funcionários"
   settings: "Configuração"
-  sms_sent: "SMS enviado com sucesso aos Estudantes selecionados e seus tutores"
-  sms_sent_selected_course: "SMS enviado com sucesso aos Estudantes (guardiões) dos Cursos selecionados"
-  sms_sent_to_employee: "SMS enviado com sucesso aos Funcionários selecionados"
-  sent_to_selected_department: "SMS enviado com sucesso aos Funcionários do Departamento selecionado"
+  sms_sending_intiated: "'SMS sending initiated successfully. Please check SMS logs for further details"
   sms_settings_page: "Página de configuração de SMS"
   send_sms_to_students: "Enviar SMS a Estudantes"
   sms_to_batches: "Enviar SMS a Turmas"
@@ -1341,7 +1338,6 @@ pt: # locale
   group_tutor: "Tutor de grupo"
   immediate_contact: "Contato imediato"
   previous_institution: "Instituição anterior"
-  report_center: "Centro de relatórios"
   no_previous_subject: "Sem Disciplinas anteriores incluídas"
   subject_wise_result: "Resumo de resultados por Disciplina"
   weighted_scores: "Pontuação ponderada"
@@ -1788,7 +1784,159 @@ pt: # locale
   group_create_privilege: "Criar grupo"
   transport_admin_privilege: "Administração de Transporte"
   task_management_privilege: "Gerenciamento de Tarefas"
+  waiting_to_approve: "Waiting To Approve"
+  no_students_in_batch: "No students present in this batch"
+  students_in_batch: "Students in this batch"
+  sms_messages: "SMS Messages"
+  total_sms_sent: "Total SMS Sent"
+  logs: "Logs"
+  sms_log_for: "SMS Log for"
+  gateway_response: "Gateway Response"
+  sent_at: "Sent at"
+  sms_logs: "SMS Logs"
+  view_all_messages: "View all messages and their status"
+  enable_news_comment_moderation: "Enable News Comment Moderation"
 
+
+#  modified timetable and timetable entries
+  select_tte:  "Select a Timetable"
+  work_allotment: "Work Allotment"
+  create_timetable: "Create Timetable"
+  edit_timetable: "Edit Timetable"
+  work_allotment_descr: "Assign subjects to teachers"
+  select_a_class_and_create_the_timetable: "Create timetable for all the classes"
+  teacher_timetable: "Teacher Timetable"
+  view_the_timetable_for_teacher: "View timetable for teachers"
+  set_weekdays: "Create Weekdays"
+  start_date_overlap: "Start time is within the range of another timetable"
+  end_date_overlap: "End time is within the range of another timetable"
+  start_date_is_lower_than_today: "Start date is lower than today's date"
+  start_date_is_lower_than_end_date: "Start date is lower than end date"
+  timetable_created_from: "Time table structure created from"
+  error_occured: "Error occured"
+  timetable_overlap: "Timetable overlap"
+  should_not_be_less_than_today: "Date should not be less than today's date"
+  timetable_updated: "Timetable updated successfully"
+  timetable_update_failure: "Timetable update failed"
+  work_allotment_success: "Successfully updated work allotment."
+  updated_with_errors: "Updated with errors in work allotment."
+  select_a_batch_to_continue: "Select a batch to continue"
+  electives: "Elective Groups"
+  no_entries_found: "No timetable entries found"
+  select_a_tte: "Select a timetable"
+  basestart_date_overlap: "Start time is within the range of another timetable"
+  baseend_date_overlap: "End time is within the range of another timetable"
+  basestart_date_is_lower_than_today: "Start date is lower than today's date"
+  basestart_date_is_lower_than_end_date: "Start date is lower than end date"
+  time_period:  "Period"
+  select_a_batch: "Select a batch"
+  select_employee: "Select employee"
+  assign_multiple_teachers: "Assign multiple teachers"
+  new_timetable: "New Timetable"
+  edit_entries: "Edit entries"
+  timetable_deleted: "Timetable deleted successfully"
+  delete_timetable: "Are you sure you want to delete this timetable?"
+  basestart_date_is_invalid: "Start date is invalid"
+  baseend_date_is_invalid: "End date is invalid"
+  remove_entry_confirm: "Remove entry?"
+  should_not_be_admin: "Should Not Be Admin"
+
+  #exam updates
+  ranking_levels_text: "Ranking Levels"
+  class_designations_text: "Class Designations"
+  cce_sttings: "CCE Settings"
+  manage_ranking_levels: "Manage Ranking Levels"
+  manage_class_designations: "Manage Class Designations"
+  manage_cce_settings: "Manage CCE Settings"
+  no_ranking_level_found: "No Ranking Levels found"
+  gpa_level: "GPA Level"
+  gpa_limit_type: "GPA Limit Type"
+  marks_limit_type: "Marks Limit Type"
+  number_of_subjects: "Number of Subjects"
+  subject_limit_type: "Subject Limit Type"
+  consider_full_course_duration: "Consider Full Course Duration?"
+  cgpa: "CGPA"
+  no_class_designations_found: "No Class Designations found"
+  previous_batch_exam: "Previous Batch Exams"
+  manage_grade_rank_designation: "Manage Grading Levels, Ranking Levels and Class Designations"
+  generate_reports: "Generate Reports"
+  generate_student_reports_for_grouped_exams: "Generates Student Reports for Grouped Exams"
+  view_student_report: "View Student Reports"
+  generate_previous_reports: "Generate Previous Reports"
+  generate: "Generate"
+  generate_previous_batch_reports: "Generate Previous Batch Reports"
+  weightage: "Weightage"
+  total_weghtage: "Total Weightage"
+  student_ranking_per_subject: "Student Ranking per Subject"
+  generates_reports_for_subject_wise: "Generates reports for Subject wise Student Rank"
+  student_ranking_per_batch: "Student Ranking per Batch"
+  generates_reports_for_batch_wise: "Generates reports for Batch wise Overall Student Rank"
+  student_ranking_per_course: "Student Ranking per Course"
+  generates_reports_for_course_wise: "Generates reports for Course wise Overall Student Rank"
+  student_ranking_per_school: "Student Ranking per School"
+  generate_report_for_overall_student_rank: "Generates reports for Overall Student Rank for this School"
+  student_ranking_per_attendance: "Student Ranking per Attendance"
+  generates_reports_for_batch_wise_student_per_rank: "Generates reports for Batch wise Student Rank per Attendance"
+  ranking_level_report: "Ranking Level Report"
+  generates_reports_based_on_different_ranking: "Generates reports based on different Ranking Levels"
+  view_transcripts: "View Transcripts"
+  generate_student_transcripts: "Generates Student Transcripts"
+  combined_reports: "Combined Reports"
+  combined_report: "Combined Report"
+  generates_combined_student_report: "Generates Combined Student Reports"
+  cce_reports: "CCE Reports"
+  subjects_rankings: "Subject Rankings"
+  overall_rankings: "Overall Rankings"
+  rank: "Rank"
+  no_grouped_exams_for_this_batch: " No grouped exams for this Batch."
+  no_students_for_this_batch: "No Students for this Batch."
+  overall_batch_rankings: "Overall Batch Rankings"
+  no_grouped_exams_in_this_batch_group: "No Grouped Exams in this Batch Group"
+  no_students_in_this_batc_group: "No Students in this Batch Group"
+  overall_school_rankings: "Overall School Rankings"
+  no_grouped_exams_in_this_school: "No Grouped Exams in this School."
+  no_students_in_this_school: "No Students in this School."
+  no_courses_for_this_school: "No Courses for this School."
+  overall_ranking_per_attendance: "Overall Rankings per Attendance"
+  working_days: "Working Days"
+  attended: "Attended"
+  no_working_days_for_this_batch: "No Working Days for this Batch."
+  no_students_in_this_batch: "No students in this Batch."
+  course_wise: "Course wise"
+  select_a_student: "Select a Student"
+  transcript_of_academic_record: "Transcript of Academic Record"
+  subject_code: "Subject Code"
+  subject_title: "Subject Title"
+  combined_weighted_average: "Combined Weighted Average"
+  batch_wise_cumulative_grade_point_average: "Batch wise Cumulative Grade Point Average"
+  combined_percentage: "Combined Percentage"
+  course_wise_cumulative_grade_point: "Course wise Cumulative Grade Point Average (CGPA)"
+  course_wise_combined_weighted_average: "Course wise Combined Weighted Average"
+  course_wise_combined_percentage: "Course wise Combined Percentage"
+  no: "No"
+  students_found: "Students found."
+  cwa: "CWA"
+  no_students_for_this_class_designation: "No Students for this Class Designation."
+  no_students_for_this_ranking_level: "No Students for this Ranking Level."
+  weighted_marks: "Weighted Marks"
+  credits: "Credits"
+  weighted_average: "Weighted Average"
+  grade_point_average_gpa: "Grade Point Average (GPA)"
+  combined: "Combined"
+  gpa: "GPA"
+  select_a_batch_group: "Select a Batch Group"
+  select_ranking_level: "Select a Ranking Level"
+  select_a_report_type: "Select a Report Type"
+  subject_wise: "Subject wise"
+  include_grading_systems: "Include Grading Systems"
+  archived_student_reports: "Archived Student Reports"
+  generates_reports_for_archived_student_exam_wise: "Generates reports for Archived Students Exam wise"
+  archived_exams1: "Archived Exams1"
+  archived_batches_grouped_exam_report: "Archived Batches Grouped Exam Report"
+  generates_grouped_exam_reports_for_archived_students: "Generates Grouped Exam reports for Archived Students"
+  exam_reports1: "Exam Reports1"
+  archived_grouped_exam_reports: "Archived Grouped Exam Reports"
+  is_final_exam: "Is Final Exam?"
 
   flash_msg1: "Grupo de exames adicionais atualizado com sucesso."
   flash_msg2: "Desculpe"
@@ -2044,6 +2192,23 @@ pt: # locale
     flash3: "Parâmetros inválidos."
     flash4: "Selecione uma Disciplina para continuar"
     flash5: "Não há Estudantes na Turma selecionada"
+    flash6: "Exam score exceeds Maximum Mark."
+    flash7: "Exam scores updated."
+    flash8: "Garading Levels are not set. Please set Garding Levels."
+    flash9: "Sum of the weightages must be 100%"
+    flash10: "Reports have been generated successfully."
+    flash11: "Select atleast one Batch to continue."
+    flash12: "No inactive batches in this Course."
+    flash13: "Select a Course to continue."
+    flash14: "Select a Batch Group to continue."
+    flash15: "Start Date cannot be greater than End Date."
+    flash16: "Select a Mode to continue."
+    flash17: "Select a Ranking Level to continue."
+    flash18: "Select a Report Type to continue."
+    flash19: "No Grouped Exams found for this Batch."
+    flash20: "No Grouped Exams found for this Batch Group."
+    flash21: "Select a Student to continue."
+    flash22: "Select a Batch and atleast one option to continue."
 
 # exams controller
   exams:
@@ -2075,6 +2240,23 @@ pt: # locale
     flash1: "O Quadro de Horários já foi publicado"
     flash2: "Quadro de Horários atualizado"
     flash3: "Quadro de Horários publicado"
+
+    ##class designations
+  class_designations:
+    flash1: "Class Designation created successfully."
+    flash2: "Class Designation updated successfully."
+    flash3: "Class Designation deleted successfully."
+
+  ##ranking levels
+  ranking_levels:
+    flash1: "Ranking Level created successfully."
+    flash2: "Ranking Level updated successfully."
+    flash3: "Ranking Level deleted successfully."
+
+  ##exam reports
+  exam_reports:
+    flash1: "No Students in selected batch"
+    flash2: "No student found in that exam group."
 
   shared:
     user:
