--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1166,12 +1166,9 @@ hi:
   departments: "विभागों"
   employees: "कर्मचारियों"
   settings: "सेटिंग्स"
-  sms_sent: "एसएमएस चयनित छात्रों और उनके अभिभावकों के लिए सफलतापूर्वक भेजा"
   sms_sending_failed_with_response: "एसएमएस भेजने प्रतिक्रिया के साथ विफल"
   sms_configuration_not_found: "एसएमएस विन्यास फाइल नहीं मिला."
-  sms_sent_selected_course: "&#39;एसएमएस चयनित पाठ्यक्रम के छात्रों (संरक्षक) को सफलतापूर्वक भेजा"
-  sms_sent_to_employee: "एसएमएस चयनित कर्मचारियों को सफलतापूर्वक भेजा"
-  sent_to_selected_department: "एसएमएस चयनित विभाग के कर्मचारियों को सफलतापूर्वक भेजा"
+  sms_sending_intiated: "'SMS sending initiated successfully. Please check SMS logs for further details"
   sms_settings_page: "एसएमएस सेटिंग्स पेज"
   send_sms_to_students: "छात्रों के लिए एसएमएस भेजें"
   sms_to_batches: "बैच के लिए एसएमएस भेजें"
@@ -1332,7 +1329,6 @@ hi:
   group_tutor: "समूह ट्यूटर"
   immediate_contact: "तत्काल संपर्क"
   previous_institution: "पिछला इंस्टीट्यूशन"
-  report_center: "रिपोर्ट केंद्र"
   no_previous_subject: "नहीं पिछला विषय जोड़ा गया"
   subject_wise_result: "विषय वार परिणाम सिंहावलोकन"
   weighted_scores: "भारित स्कोर"
@@ -1781,6 +1777,15 @@ hi:
   waiting_to_approve: "स्वीकृत प्रतीक्षा कर रहा है "
   no_students_in_batch: "कोई भी छात्र इस बैच में मौजूद"
   students_in_batch: "इस बैच में छात्र"
+  sms_messages: "SMS Messages"
+  total_sms_sent: "Total SMS Sent"
+  logs: "Logs"
+  sms_log_for: "SMS Log for"
+  gateway_response: "Gateway Response"
+  sent_at: "Sent at"
+  sms_logs: "SMS Logs"
+  view_all_messages: "View all messages and their status"
+  enable_news_comment_moderation: "Enable News Comment Moderation"
   
 #  modified timetable and timetable entries
   select_tte:  "एक समय सारिणी का चयन करें"
@@ -1824,6 +1829,103 @@ hi:
   baseend_date_is_invalid: "समाप्ति तिथि अमान्य है"
   remove_entry_confirm: "प्रविष्टि निकालें?"
   should_not_be_admin: नहीं होना चाहिए "एडमिन"
+
+ #exam updates
+  ranking_levels_text: "Ranking Levels"
+  class_designations_text: "Class Designations"
+  cce_sttings: "CCE Settings"
+  manage_ranking_levels: "Manage Ranking Levels"
+  manage_class_designations: "Manage Class Designations"
+  manage_cce_settings: "Manage CCE Settings"
+  no_ranking_level_found: "No Ranking Levels found"
+  gpa_level: "GPA Level"
+  gpa_limit_type: "GPA Limit Type"
+  marks_limit_type: "Marks Limit Type"
+  number_of_subjects: "Number of Subjects"
+  subject_limit_type: "Subject Limit Type"
+  consider_full_course_duration: "Consider Full Course Duration?"
+  cgpa: "CGPA"
+  no_class_designations_found: "No Class Designations found"
+  previous_batch_exam: "Previous Batch Exams"
+  manage_grade_rank_designation: "Manage Grading Levels, Ranking Levels and Class Designations"
+  generate_reports: "Generate Reports"
+  generate_student_reports_for_grouped_exams: "Generates Student Reports for Grouped Exams"
+  view_student_report: "View Student Reports"
+  generate_previous_reports: "Generate Previous Reports"
+  generate: "Generate"
+  generate_previous_batch_reports: "Generate Previous Batch Reports"
+  weightage: "Weightage"
+  total_weghtage: "Total Weightage"
+  student_ranking_per_subject: "Student Ranking per Subject"
+  generates_reports_for_subject_wise: "Generates reports for Subject wise Student Rank"
+  student_ranking_per_batch: "Student Ranking per Batch"
+  generates_reports_for_batch_wise: "Generates reports for Batch wise Overall Student Rank"
+  student_ranking_per_course: "Student Ranking per Course"
+  generates_reports_for_course_wise: "Generates reports for Course wise Overall Student Rank"
+  student_ranking_per_school: "Student Ranking per School"
+  generate_report_for_overall_student_rank: "Generates reports for Overall Student Rank for this School"
+  student_ranking_per_attendance: "Student Ranking per Attendance"
+  generates_reports_for_batch_wise_student_per_rank: "Generates reports for Batch wise Student Rank per Attendance"
+  ranking_level_report: "Ranking Level Report"
+  generates_reports_based_on_different_ranking: "Generates reports based on different Ranking Levels"
+  view_transcripts: "View Transcripts"
+  generate_student_transcripts: "Generates Student Transcripts"
+  combined_reports: "Combined Reports"
+  combined_report: "Combined Report"
+  generates_combined_student_report: "Generates Combined Student Reports"
+  cce_reports: "CCE Reports"
+  subjects_rankings: "Subject Rankings"
+  overall_rankings: "Overall Rankings"
+  rank: "Rank"
+  no_grouped_exams_for_this_batch: " No grouped exams for this Batch."
+  no_students_for_this_batch: "No Students for this Batch."
+  overall_batch_rankings: "Overall Batch Rankings"
+  no_grouped_exams_in_this_batch_group: "No Grouped Exams in this Batch Group"
+  no_students_in_this_batc_group: "No Students in this Batch Group"
+  overall_school_rankings: "Overall School Rankings"
+  no_grouped_exams_in_this_school: "No Grouped Exams in this School."
+  no_students_in_this_school: "No Students in this School."
+  no_courses_for_this_school: "No Courses for this School."
+  overall_ranking_per_attendance: "Overall Rankings per Attendance"
+  working_days: "Working Days"
+  attended: "Attended"
+  no_working_days_for_this_batch: "No Working Days for this Batch."
+  no_students_in_this_batch: "No students in this Batch."
+  course_wise: "Course wise"
+  select_a_student: "Select a Student"
+  transcript_of_academic_record: "Transcript of Academic Record"
+  subject_code: "Subject Code"
+  subject_title: "Subject Title"
+  combined_weighted_average: "Combined Weighted Average"
+  batch_wise_cumulative_grade_point_average: "Batch wise Cumulative Grade Point Average"
+  combined_percentage: "Combined Percentage"
+  course_wise_cumulative_grade_point: "Course wise Cumulative Grade Point Average (CGPA)"
+  course_wise_combined_weighted_average: "Course wise Combined Weighted Average"
+  course_wise_combined_percentage: "Course wise Combined Percentage"
+  no: "No"
+  students_found: "Students found."
+  cwa: "CWA"
+  no_students_for_this_class_designation: "No Students for this Class Designation."
+  no_students_for_this_ranking_level: "No Students for this Ranking Level."
+  weighted_marks: "Weighted Marks"
+  credits: "Credits"
+  weighted_average: "Weighted Average"
+  grade_point_average_gpa: "Grade Point Average (GPA)"
+  combined: "Combined"
+  gpa: "GPA"
+  select_a_batch_group: "Select a Batch Group"
+  select_ranking_level: "Select a Ranking Level"
+  select_a_report_type: "Select a Report Type"
+  subject_wise: "Subject wise"
+  include_grading_systems: "Include Grading Systems"
+  archived_student_reports: "Archived Student Reports"
+  generates_reports_for_archived_student_exam_wise: "Generates reports for Archived Students Exam wise"
+  archived_exams1: "Archived Exams1"
+  archived_batches_grouped_exam_report: "Archived Batches Grouped Exam Report"
+  generates_grouped_exam_reports_for_archived_students: "Generates Grouped Exam reports for Archived Students"
+  exam_reports1: "Exam Reports1"
+  archived_grouped_exam_reports: "Archived Grouped Exam Reports"
+  is_final_exam: "Is Final Exam?"
 
   flash_msg1: "अतिरिक्त परीक्षा समूह सफलतापूर्वक नवीनीकृत|"
   flash_msg2: "क्षमा करें"
@@ -2079,7 +2181,24 @@ hi:
     flash3: "अमान्य पैरामीटर|"
     flash4: "जारी रखने के लिए विषय का चयन करें"
     flash5: "चयनित बैच में कोई छात्र"
-     
+    flash6: "Exam score exceeds Maximum Mark."
+    flash7: "Exam scores updated."
+    flash8: "Garading Levels are not set. Please set Garding Levels."
+    flash9: "Sum of the weightages must be 100%"
+    flash10: "Reports have been generated successfully."
+    flash11: "Select atleast one Batch to continue."
+    flash12: "No inactive batches in this Course."
+    flash13: "Select a Course to continue."
+    flash14: "Select a Batch Group to continue."
+    flash15: "Start Date cannot be greater than End Date."
+    flash16: "Select a Mode to continue."
+    flash17: "Select a Ranking Level to continue."
+    flash18: "Select a Report Type to continue."
+    flash19: "No Grouped Exams found for this Batch."
+    flash20: "No Grouped Exams found for this Batch Group."
+    flash21: "Select a Student to continue."
+    flash22: "Select a Batch and atleast one option to continue."
+    
 # exams controller
   exams:
     flash1: "अद्यतित परीक्षा विवरण सफलतापूर्वक|"
@@ -2109,6 +2228,23 @@ hi:
     flash1: "समय सारिणी पहले ही प्रकाशित किया गया"
     flash2: "समय सारिणी अद्यतन"
     flash3: "समय तालिका प्रकाशित"
+
+    ##class designations
+  class_designations:
+    flash1: "Class Designation created successfully."
+    flash2: "Class Designation updated successfully."
+    flash3: "Class Designation deleted successfully."
+
+  ##ranking levels
+  ranking_levels:
+    flash1: "Ranking Level created successfully."
+    flash2: "Ranking Level updated successfully."
+    flash3: "Ranking Level deleted successfully."
+
+  ##exam reports
+  exam_reports:
+    flash1: "No Students in selected batch"
+    flash2: "No student found in that exam group."
     
   shared:
     user:
