modified archived student reports [fixed #3172]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3275 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1962,6 +1962,7 @@ en: # locale
   exam_reports_text: "Exam Reports"
   archived_grouped_exam_reports: "Archived Grouped Exam Reports"
   is_final_exam: "Is Final Exam?"
+  retaken: "Retaken"
   
   flash_msg1: "Updated additional exam group successfully."
   flash_msg2: "Sorry"
