translation for student view privilege
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3322 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1049,6 +1049,7 @@ en: # locale
   admission_privilege: "Admission"
   students_control_privilege: "Students Control"
   manage_news_privilege: "Manage News"
+  student_view: "Student View"
   timetable_privilege: "Timetable"
   student_attendance_view_privilege: "Student Attendance View"
   hr_basics_privilege: "Hr Basics"
