translation for student view privilege
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3327 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1042,6 +1042,8 @@ ar:
   admission_privilege: "قبول"
   students_control_privilege: "طلاب التحكم"
   manage_news_privilege: "إدارة الأخبار"
+  student_view: "اعرض"
+  student_view_privilege: "اعرض"
   timetable_privilege: "الجدول الزمني"
   student_attendance_view_privilege: "طالب الحضور الشخصي"
   hr_basics_privilege: "أساسيات ساعة"
