login page style changed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3420 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1290,7 +1290,7 @@ en: # locale
   campus_news: "Campus News"
   reminders: "Reminders"
   remember_me: "Remember me"
-  forgot_password: "Help! I've Forgotten my Password?"
+  forgot_password: "Forgot Password?"
   login: "Login"
   enter_email: "Enter your username"
   contact_admin: "Contact Fedena Administrator to recover your password"
