fixes #3304,#3305  translation issues
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3440 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -1918,7 +1918,7 @@ pt: # locale
   course_wise_cumulative_grade_point: "Course wise Cumulative Grade Point Average (CGPA)"
   course_wise_combined_weighted_average: "Course wise Combined Weighted Average"
   course_wise_combined_percentage: "Course wise Combined Percentage"
-  no: "No"
+  no_text: "No"
   students_found: "Students found."
   cwa: "CWA"
   no_students_for_this_class_designation: "No Students for this Class Designation."
